--- a/views/Css/variaveis.css
+++ b/views/Css/variaveis.css
@@ -35,6 +35,7 @@
     --background-cards: rgba(192, 192, 192, 0.15);
     --background-tabelas-adm:#FFFBFA;
     --tabelas-colunas-adm:rgb(0, 51, 193, 29%);
+    --background-button-red:#730202;
 }
 
 body {
@@ -59,6 +60,7 @@ button,
 }
 
 input, 
+select,
 select#tipo, 
 select#campeonato,
 select#kartodromo,
