--- a/views/Css/classificacao.css
+++ b/views/Css/classificacao.css
@@ -63,8 +63,7 @@ form{
 .filtro_ano, 
 .filtro_dia, 
 .filtro_mes, 
-.filtro_campeonato,
-.filtro_classificacao{
+.filtro_campeonato{
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -89,7 +88,7 @@ input,
 select.buscaSelect{
     max-width: 260px;
     font-family: var(--fonte-title);
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     font-weight: 500;
     background-color: white;
     border-color: var(--color-menu);
@@ -187,10 +186,9 @@ button.bt_filtrar:hover {
     .filtro_ano input, 
     select.buscaSelect,
     button.bt_filtrar {
-        max-width: 400px;
+        width: 260px;
     }
 
-    input,
     button {
         width: 282px;
     }
@@ -233,16 +231,11 @@ button.bt_filtrar:hover {
         gap: 5rem;
         padding: 2rem;
     }
-
-    .filtro_classificacao,
-    .filtro_campeonato {
-        flex-basis: calc(40% - 20px);
-    }
     
     input, 
     select.buscaSelect,
     button.bt_filtrar{
-        font-size: 1.6rem;
+        font-size: 1.5rem;
     }
 
     select option{
@@ -278,23 +271,9 @@ button.bt_filtrar:hover {
     .containerFiltros{
         justify-content: center;
         align-items: center;
-        gap: 3rem;
         padding: 2rem;
     }
 
-    .filtro_dia,
-    .filtro_mes {
-        flex-basis: calc(40% - 50px);
-    }
-
-    input, 
-    select.buscaSelect,
-    button.bt_filtrar,
-    form label,
-    div.time,
-    select option{
-        font-size: 1.8rem;
-    }
 }
 
 @media (min-width: 1300px) {
@@ -310,8 +289,7 @@ button.bt_filtrar:hover {
         gap: 30px;
     }
 
-    .filtro_campeonato,
-    .filtro_classificacao {
+    .filtro_campeonato {
         display: flex;
         flex-direction: column;
         flex-basis: 0;
@@ -321,49 +299,15 @@ button.bt_filtrar:hover {
     .filtro_mes {
         flex-basis: 0;
     }
-
-    .filtro_classificacao {
-        flex-basis: auto; 
-        max-width: none; 
-        width: auto; 
-    }
-
-    input, 
-    select.buscaSelect,
-    button.bt_filtrar,
-    form label,
-    div.time,
-    select option{
-        font-size: 1.5rem;
-    }
 }
 
 @media (min-width: 1440px) {
-    input, 
-    select.buscaSelect,
-    button.bt_filtrar,
-    form label,
-    div.time,
-    select option{
-        font-size: 1.7rem;
-    }
-
-    
     button.bt_filtrar{
         margin: 0;
     }
 }
 
 @media (min-width: 1800px) {
-    input, 
-    select.buscaSelect,
-    button.bt_filtrar,
-    form label,
-    div.time,
-    select option{
-        font-size: 1.7rem;
-    }
-
     .containerFiltros {
         gap: 45px;
         padding: 5rem;
