--- a/views/Css/variaveis.css
+++ b/views/Css/variaveis.css
@@ -27,6 +27,7 @@
     /*COR CERTA -> #232121*/
     --fonte-title: "Chakra Petch", sans-serif;
     --color-menu: #0033C1;
+    --notificacao-exclamacao: #e9bd0c;
 
     --categoria-ddl-livre: #069B0C;
     --categoria-ckc-95: #B5CC18;
