--- a/views/Css/variaveis.css
+++ b/views/Css/variaveis.css
@@ -336,6 +336,26 @@ img.logo.logoManasC {
     font-size: 2.3rem;
 }
 
+.containerAcesso {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    align-items: center;
+    text-align: center;  
+    padding: 20px;
+    height: 100%;
+    margin: 0;
+}
+
+.containerAcesso p {
+    margin-top: 0;
+}
+
+.containerAcesso h1 {
+    margin-top: 3rem;
+}
+
+
 /* MENU RESPONSIVO */
 /* NAVBAR */
 @media(max-width: 700px) {
